--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: flex;
   }
@@ -29,4 +29,4 @@ a,
   #app {
     padding: 0 2rem;
   }
-}
+} */
